# cs163-final-project

./: .gitignore  CMakeLists.txt  README.md
data/: Group08News00.txt  __index.txt  stopwords.txt  testsynonym.txt
data-small/: ___index.txt
docs/: Sample Queries.md
libs/pdcurses/common/: RCa03028
src/: App.cpp  App.h  Engine.cpp  Engine.h  Global.cpp  Global.h  QueryParser.cpp  QueryParser.h  Trie.cpp  Trie.h  Utils.cpp  Utils.h  curses_wrapper.cpp  curses_wrapper.h  main.cpp
src/file_parsers/: TXTParser.cpp  TXTParser.h
src/parser/: TXTParser.cpp  TXTParser.h
synonyms/: final_synonyms.txt  process.cpp  synonyms.txt
